--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ body{
 .header{
   height: 100vh;
   width: 100vw;
-  background: transparent url('../img/bg.jpg') no-repeat top center;
+  background: transparent url('../img/bg2.jpg') no-repeat top center;
   background-size: cover;
   text-align: center;
   display: flex;
