--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ body{
 }
 
 .header{
+  position: relative;
   height: 100vh;
   width: 100vw;
   background: black url('../img/bg2.jpg') no-repeat top center;
@@ -35,6 +36,39 @@ body{
   flex-direction: column;
   align-items: center;
   color: white;
+}
+
+.teaser-arrow {
+  position: absolute;
+  color: white;
+  font-size: 3rem;
+  bottom: 0;
+  left: 50%;
+  transform: translate(0, -50%);
+  text-decoration: none;
+  animation: float 5s ease-in-out infinite;
+  opacity: .5;
+  transition: opacity .4s ease-in 0s;
+}
+
+.teaser-arrow:hover {
+  opacity: 1;
+  animation-play-state: paused;
+}
+
+@keyframes float {
+	0% {
+    transform: translatey(0px);
+    opacity: 1;
+	}
+	50% {
+    transform: translatey(-20px);
+    opacity: .8;
+	}
+	100% {
+    transform: translatey(0px);
+    opacity: 1;
+	}
 }
 
 .header__title {
@@ -115,7 +149,7 @@ h1{
     width: 33.33333%;
   }
 
-  
+
 
 }
 
