--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,9 @@ html {
 }
 
 body{
-  font-family: Arial, Helvetica, sans-serif;  
+  font-family: 'IBM Plex Mono', monospace;
+  background: black;
+  color: whitesmoke;
 }
 
 ::-moz-selection {
@@ -38,59 +40,38 @@ body{
   color: white;
 }
 
-.teaser-arrow {
+.header::before{
+  content: "";
+  z-index: 2;
   position: absolute;
-  color: white;
-  font-size: 3rem;
-  bottom: 0;
-  left: 50%;
-  transform: translate(0, -50%);
-  text-decoration: none;
-  animation: float 5s ease-in-out infinite;
-  opacity: .5;
-  transition: opacity .4s ease-in 0s;
-}
-
-.teaser-arrow:hover {
-  opacity: 1;
-  animation-play-state: paused;
-}
-
-@keyframes float {
-	0% {
-    transform: translatey(0px);
-    opacity: 1;
-	}
-	50% {
-    transform: translatey(-20px);
-    opacity: .8;
-	}
-	100% {
-    transform: translatey(0px);
-    opacity: 1;
-	}
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 40%, rgba(0,0,0,1) 100%);
 }
 
 .header__title {
-  font-family: 'Satisfy', cursive;
+  font-family: 'Barlow', sans-serif;
   margin: 2rem 0 1rem 0;
-  font-size: 12vw;
-  mix-blend-mode: exclusion;
+  font-size: 10vw;
+  line-height: 1.2;
+  text-shadow: 0px 2px 15px black;
 }
 
 .header__slogan {
   display: inline-block;
   padding: .25rem;
-  font-size: 1rem;
-  font-style: italic;
-  background: rgba(0,0,0,.5);
+  font-size: 1.25rem;
 }
 
 .header__logo {
-  width: 200px;
-  max-width: 50vw;
+  width: 160px;
   height: auto;
   background: black;
+}
+@media screen and (min-width: 700px){
+  .header__logo {width: 200px;}
 }
 .header__nav {
   display: none;
@@ -136,7 +117,6 @@ h1{
 }
 
 .segments__item {
-  border: 1px solid #eee;
   display: inline-block;
   position: relative;
   padding: .25rem .5rem .5rem .5rem;
@@ -152,14 +132,11 @@ h1{
   .segments__item {
     width: 33.33333%;
   }
-
-
-
 }
 
 .segments__item a {
   display: block;
-  color: black;
+  color: inherit;
 }
 
 .link-icon{
@@ -172,8 +149,9 @@ h1{
   /*background: black;
   color: white;*/
 }
-.segments__item a:hover img {
-  /*filter: invert(1);*/
+
+.segments__item img {
+  filter: invert(1);
 }
 
 .segments__item a {
@@ -218,27 +196,28 @@ h1{
   margin: .5rem 0 0 0;
 }
 .submit-btn {
-	box-shadow:inset 0px 1px 0px 0px #a4e271;
-	background-color:#7bb945;
-	border-radius:6px;
-	border:1px solid #74b807;
-	display:inline-block;
-	cursor:pointer;
+	display: inline-block;
+	cursor: pointer;
 	color:white;
 	font-size: 1rem;
-	font-weight: bold;
 	padding: 1rem 1.15rem;
-	text-decoration:none;
-  text-shadow:0px 1px 0px #528009;
+	text-decoration: none;
   text-align: center;
+  border: 1px solid whitesmoke;
 }
 .submit-btn:hover {
-	background-color:#77a809;
+  background: rgba(255,255,255,.3);
+  text-decoration: underline;
 }
+
 .submit-btn:active {
-	position:relative;
-	top:1px;
+	position: relative;
+	top: 1px;
 }
+
 abbr {
+  text-decoration: none;
+}
+abbr[title] {
   text-decoration: none;
 }
