--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 :root {
   --sb-black: #1a1a1a;
+  --sb-navyBlue: #0f1722;
   --sb-orange: #fd9c31;
   --sb-pink: #fc5584;
   --sb-grey: #6c6c6c;
@@ -21,10 +22,34 @@ html {
   line-height: 1.5;
 }
 
-body{
+.mono-type {
   font-family: 'IBM Plex Mono', monospace;
+}
+
+body{
+  font-family: Arial, Helvetica, sans-serif;
   background: var(--sb-black);
   color: white;
+}
+
+h1, h2, h3 {
+  font-family: 'IBM Plex Mono', monospace;
+  font-weight: 200;
+}
+h1{
+  word-spacing: -.5rem;
+}
+
+@media screen and (min-width: 700px){
+  h1{
+    font-size: 3rem;
+  }
+}
+ 
+.vr-type {
+  text-shadow: -2px 3px 0px var(--sb-navyBlue),
+              -4px 6px 0px var(--sb-orange),
+              -6px 11px 0px var(--sb-pink);
 }
 
 img {
@@ -59,27 +84,13 @@ img {
   display: block;
 }
 
-@media screen and (min-width: 700px){
-  .header__logo {
-    width: 20rem;
-    margin: 3rem 0 0 10rem;
-  }
-}
-
-
 .header__nav {
   order: 2;
   text-transform: uppercase;
   border-color: var(--sb-grey);
   border-style: solid;
+  font-weight: 300;
 }
-
-@media screen and (min-width: 700px){
-  .header__nav {
-    border-width: 0 2px 0 0;
-  }
-}
-
 
 .header__nav__list {
   list-style: none;
@@ -121,14 +132,88 @@ img {
   color: var(--sb-grey2);
 }
 
+.header__intro {
+  text-transform: uppercase;
+}
+.header__intro h1 {
+
+}
+
+.header__intro__date {
+  text-transform: uppercase;
+  font-size: 1rem;
+}
+
+.header__intro__text1 {
+  margin: 0 0 2rem 0;
+}
+.header__intro__text2 {}
+
+
+.header__sponsor {
+  text-align: center;
+}
+
+.header__sponsor__title {
+  color: var(--sb-grey);
+  font-size: .85rem;
+  font-weight: normal;
+}
+
+.header__sponsor__item {}
+.header__sponsor__item a{}
+.header__sponsor__item img{
+  display: block;
+}
+
 @media screen and (min-width: 700px){
   .header__nav{
     order: 1;
-  }
-  .header__intro{
-    order: 2;
+    border-width: 0 2px 0 0;
+    flex: 0 0 20rem;
+    padding: 5rem 0 2rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
+  .header__nav__list {
+    /*position: fixed;
+    top: 30rem;
+    left: 0;
+    */
+  }
+
+  .header__logo {
+    width: 20rem;
+    margin: 5rem 0 0 10rem;
+  }
+
+  .header__intro{
+    order: 2;
+    padding: 4rem 1rem 1rem 3rem;
+    max-width: 30rem;
+  }
+
+  .header__intro__date {}
+  .header__intro__text1 {}
+  .header__intro__text2 {}
+
+  .header__inner{
+    flex-direction: row;
+    min-height: 80vh;
+    padding: 0 0 1rem 0;
+  }
+
+  .header__sponsor {
+    padding: 0 2rem;
+    text-align: center;
+  }
+
+  .header__sponsor__item {
+    width: 110px;
+    display: inline-block;
+  }
 }
 
 
