--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ html {
 
 html {
   color: #222;
-  font-size: 1em;
+  font-size: 100%;
   line-height: 1.5;
 }
 
@@ -30,6 +30,7 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   background: var(--sb-black);
   color: white;
+  font-size: 1.15rem;
 }
 section {
   
@@ -135,7 +136,8 @@ img {
   color: var(--sb-grey2);
 }
 
-.header__nav__link--active {
+.header__nav__link--active,
+.header__nav__link:active {
   text-decoration: line-through;
   color: var(--sb-grey2);
 }
@@ -181,20 +183,20 @@ img {
   .header__nav{
     order: 1;
     border-width: 0 2px 0 0;
-    flex: 0 0 20rem;
+    flex: 0 0 22rem;
     padding: 5rem 0 4rem 0;
   }
 
-  .header__nav__list {
-    /*position: fixed;
-    top: 30rem;
+  .header__nav.sticky .header__nav__list {
+    position: fixed;
+    transform: translate(0, 4rem);
+    top: 0;
     left: 0;
-    */
   }
 
   .header__logo {
     width: 20rem;
-    margin: 5rem 0 0 10rem;
+    margin: 5rem 0 0 12rem;
   }
 
   .header__intro{
@@ -230,10 +232,6 @@ img {
     display: inline-block;
   }
 
-  section {
-    padding: 2rem 1rem 2rem 10rem;
-    max-width: 2000px;
-  }
 }
 
 
@@ -258,6 +256,15 @@ img {
 .site-section__header__subtitle{
   margin: 0;
   color: var(--sb-grey)
+}
+@media screen and (min-width: 700px){
+  .site-section {
+    padding: 2rem 1rem 2rem 12rem;
+    max-width: 2000px;
+  }
+  .site-section__header__title{
+    font-size: 4rem;
+  }
 }
 
 
@@ -434,12 +441,10 @@ img {
 
   .footer__inner{
     max-width: 850px;
-    padding-left: 10rem;
+    padding-left: 12rem;
   }
   
 }
-
-
 
 
 
