--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -69,7 +69,6 @@
             </div>
         </header>
 
-
         <section class="site-section img-break">
             <img src="{{ site.url }}/img/header.jpg" alt="Hanserino som løper en ukjent sti i Lillomarka">
         </section>
@@ -82,7 +81,7 @@
 
             <div class="segments">
                 <div class="segments__segment">
-                    <h3 class="segment__title" id="stirsdag-classic">1. Stirsdag Classic</h3>
+                    <h3 class="segment__title" id="stirsdag-classic">BC1: Stirsdag Classic</h3>
                         <div class="segments__segment__inner">
                             <div class="segment__resources">
                                 <img src="{{ site.url }}/img/stirsdag.jpg" alt="Bilde av gps-sporene til Stirsdag Classic-segmentet">
@@ -110,7 +109,7 @@
                 </div>
 
                 <div class="segments__segment">
-                    <h3 class="segment__title" id="lilotrail">2. Lilo Trail</h3>
+                    <h3 class="segment__title" id="lilotrail">BC2: Lilo Trail</h3>
                     <div class="segments__segment__inner">
 
                         <div class="segment__resources">
@@ -138,7 +137,7 @@
                 </div>
 
                 <div class="segments__segment">
-                    <h3 class="segment__title" id="lillomarka-rundt">3. Lillomarka Rundt</h3>
+                    <h3 class="segment__title" id="lillomarka-rundt">BC3: Lillomarka Rundt</h3>
                     <div class="segments__segment__inner">
                         <div class="segment__resources">
                             <img src="{{ site.url }}/img/lillomarka_rundt.jpg" alt="Bilde av gps-sporene til Lillomarka Rundt">
