--- a/_style/main.scss
+++ b/_style/main.scss
@@ -682,11 +682,11 @@ transition: text-shadow 0.2s ease-out;
 }
 .leaderboards__table tr th:first-child,
 .leaderboards__table tr td:first-child {
-//width: 4em;
+    width: 25em;
 }
 .leaderboards__table tr th:last-child,
 .leaderboards__table tr td:last-child {
-//width: 10em;
+//width: em;
 }
 .leaderboards__table tr:hover td {
 text-shadow: -2px 2px 0px $sb-navyBlue,
